fix: change navigation menu visibility from opacity to display property

--- a/planapp/appstyle.css
+++ b/planapp/appstyle.css
@@ -778,7 +778,7 @@ nav.static {
   transform: translate(-10vw);
 }
 nav.static:has(.nav-container:has(input[type="checkbox"]:checked)) ~ .container {
-  opacity: 0 !important;
+  display: none;
 }
 .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
   transform: rotate(45deg);
